--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -21,6 +21,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:layout_toRightOf="@id/list_item_pic"
+        android:textColor="#FF000000"
         android:text="Product Name"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
 
@@ -31,6 +32,19 @@
         android:layout_below="@id/list_item_product_name"
         android:layout_toRightOf="@id/list_item_pic"
         android:text="Product details"
+        android:textColor="#FF000000"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
+
+    <ImageView
+        android:id="@+id/list_item_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_listitem_arrow"
+        android:paddingRight="16dp"
+        android:layout_alignTop="@+id/list_item_product_name"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="24dp"
+        android:layout_marginEnd="24dp" />
 
 </RelativeLayout>
