Loans to CreditActivity Transition

--- a/app/src/main/res/layout/content_credits.xml
+++ b/app/src/main/res/layout/content_credits.xml
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingBottom="16dp"
-        android:text="Осталось 27 дней"
+        android:text=""
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:textColor="@color/colorAccent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingBottom="32dp"
-        android:text="6,822 тг"
+        android:text="@string/creditDebt"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:textColor="@color/colorAccent"
         android:textStyle="bold"
@@ -63,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingBottom="32dp"
-        android:text="Рекомендуем оплатить до \n 26.12.2016"
+        android:text="@string/creditNextDateDue"
         android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:textColor="@color/colorAccent"
@@ -87,7 +87,7 @@
         android:id="@+id/credits_deal_total_debt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Сумма полного погащения\n 7,319 тг"
+        android:text="@string/creditDealTotalDebt"
         android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:textColor="@color/colorAccent"
