--- a/app/src/main/res/layout/loans.xml
+++ b/app/src/main/res/layout/loans.xml
@@ -14,9 +14,10 @@
             android:text="@string/loans_title"
             android:textAlignment="center"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimary" />
 
         <ListView
+            android:paddingTop="8dp"
             android:id="@+id/loans_list_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
