--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,49 +2,49 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="72dp"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp">
 
     <ImageView
         android:id="@+id/list_item_pic"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginRight="8dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"/>
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:src="@mipmap/ic_homecredit_logo" />
 
     <TextView
         android:id="@+id/list_item_product_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_toRightOf="@id/list_item_pic"
-        android:textColor="#FF000000"
+        android:layout_alignLeft="@+id/list_item_details"
+        android:layout_alignStart="@+id/list_item_details"
+        android:layout_alignTop="@+id/list_item_pic"
         android:text="Product Name"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textColor="#FF000000" />
 
     <TextView
         android:id="@+id/list_item_details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/list_item_product_name"
-        android:layout_toRightOf="@id/list_item_pic"
+        android:layout_marginLeft="72dp"
         android:text="Product details"
-        android:textColor="#FF000000"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+        android:textColor="#FF000000"/>
 
     <ImageView
         android:id="@+id/list_item_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_listitem_arrow"
-        android:paddingRight="16dp"
-        android:layout_alignTop="@+id/list_item_product_name"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="24dp"
-        android:layout_marginEnd="24dp" />
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:paddingRight="10dp"
+        android:src="@drawable/ic_listitem_arrow" />
 
 </RelativeLayout>
