--- a/app/src/main/res/layout/loans.xml
+++ b/app/src/main/res/layout/loans.xml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/layout_gradient_red">
 
-        <TextView
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/layout_rounded"
-            android:text="@string/loans_title"
-            android:textAlignment="center"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:textColor="@color/colorPrimary" />
+    <ProgressBar
+        android:id="@+id/loansProgressBar"
+        android:background="@android:color/darker_gray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="50dp"
+        android:minWidth="50dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-        <ListView
-            android:paddingTop="8dp"
-            android:id="@+id/loans_list_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorAccent"/>
+    <TextView
+        android:id="@+id/loans_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/layout_rounded"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp"
+        android:text="@string/loans_title"
+        android:textAlignment="center"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:textColor="@color/colorPrimary" />
 
-</LinearLayout>
+    <ListView
+        android:layout_below="@id/loans_title"
+        android:id="@+id/loans_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:paddingTop="8dp" />
+
+</RelativeLayout>
