--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:checkableBehavior="single">
         <item
@@ -10,6 +11,12 @@
             android:id="@+id/nav_payments"
             android:icon="@mipmap/ic_monetization_on_black_24dp"
             android:title="@string/nav_payments" />
+        <item
+            android:id="@+id/nav_spec_offers"
+            android:icon="@mipmap/ic_local_offer_black_24dp"
+            android:title="@string/nav_offers"
+            app:actionViewClass = "android.widget.TextView"
+            android:enabled="false"/>
     </group>
 
 </menu>
