--- a/app/src/main/res/layout/content_credits.xml
+++ b/app/src/main/res/layout/content_credits.xml
@@ -100,7 +100,7 @@
         android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:paddingBottom="32dp"
-        android:text="@string/credits_schedule"
+        android:text="@string/creditsSchedule"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:textColor="@color/colorAccent" />
 
